[package]
name = "fraktal"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-complex = "0.4.6"
rand = "0.10.1"
rand_chacha = "0.10.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
rayon = "1.12.0"


[profile.dev]
opt-level = 3

